# impsy-rpi-image-maker

./: .gitignore  README.md  hosts.yml  impsy.yml  install-impsy.yml  main.yml  pyproject.toml  run.sh
.github/workflows/: main.yml
host/: start.yml
raspi/: impsy.yml  install-impsy.yml  test.yml
templates/: g_ether.j2  impsy-run.service.j2  impsy-web.service.j2
